--- a/client/package.json
+++ b/client/package.json
@@ -16,7 +16,9 @@
     "react-hook-form": "^7.33.1",
     "react-hot-toast": "^2.3.0",
     "react-icons": "^4.4.0",
+    "react-loading": "^2.0.3",
     "react-rating": "^2.0.5",
+    "react-rating-stars-component": "^2.2.0",
     "react-redux": "^8.0.2",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
