--- a/client/package.json
+++ b/client/package.json
@@ -26,6 +26,7 @@
     "react-scripts": "5.0.1",
     "redux-persist": "^6.0.0",
     "sass": "^1.54.0",
+    "sweetalert": "^2.1.2",
     "swiper": "^8.3.2",
     "web-vitals": "^2.1.4"
   },
